[project]
name = "fuzzboot"
version = "0.1.0"
description = "Simple fuzzer for discovering hidden fastboot gems"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "adb @ git+https://github.com/google/python-adb.git",
    "libusb1>=3.0.0",
    "cryptography>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
